# reports-automat

./: .gitignore  README.md  pyproject.toml
docs/: ab-report-template-mapping.md  awol-empty-output-investigation.md  awol-report-structure.md  casino-ret-report-structure.md  report-types-summary.md  week-replacement-analysis.md
src/report_automation/plugins/base/: plugin.py
src/report_automation/plugins/implementations/: ab_report.py  awol.py  casino_ret.py
